# glufs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  archiver.c  entry.c  glufs.c  main.c  metadata.c
.github/workflows/: cmake.yml
include/glufs/: entry.h  glufs.h  metadata.h
